--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -191,16 +191,6 @@ error ]</a></li>
 ]</a></li>
 <li><a href="#2019-05-30-1013-thanasisn">2019-05-30 10:13
 [ThanasisN]</a></li>
-<li><a href="#2019-04-11-0927-thanasisn-1">2019-04-11 09:27
-[ThanasisN]</a></li>
-<li><a href="#2019-05-06-thanasisn-1">2019-05-06 [ThanasisN]</a></li>
-<li><a href="#2019-05-10-0922-thanasisn-1">2019-05-10 09:22
-[ThanasisN]</a></li>
-<li><a href="#2019-05-13-thanasisn-1">2019-05-13 [ThanasisN]</a></li>
-<li><a href="#2019-05-18-0910-thanasisn-1">2019-05-18 09:10
-[ThanasisN]</a></li>
-<li><a href="#2019-05-30-1013-thanasisn-1">2019-05-30 10:13
-[ThanasisN]</a></li>
 <li><a href="#2019-06-12-1054-thanasisn">2019-06-12 10:54
 [ThanasisN]</a></li>
 <li><a href="#2019-06-17-0935-thanasisn">2019-06-17 09:35
@@ -233,15 +223,6 @@ radmon problem data_loss sighting chp1 ]</a></li>
 <li><a href="#tags--cleaning--3">tags: [ cleaning ]</a></li>
 <li><a href="#2020-06-10-1059-thanasisn">2020-06-10 10:59
 [ThanasisN]</a></li>
-<li><a href="#2020-01-03-thanasisn-1">2020-01-03 [ThanasisN]</a></li>
-<li><a href="#2020-04-29-0905-thanasisn-1">2020-04-29 09:05
-[ThanasisN]</a></li>
-<li><a href="#2020-04-30-1212-thanasisn-1">2020-04-30 12:12
-[ThanasisN]</a></li>
-<li><a href="#2020-05-07-1031-thanasisn-1">2020-05-07 10:31
-[ThanasisN]</a></li>
-<li><a href="#2020-06-10-1059-thanasisn-1">2020-06-10 10:59
-[ThanasisN]</a></li>
 </ul></li>
 <li><a href="#2022">2022</a>
 <ul>
@@ -266,20 +247,6 @@ broadband ccd ]</a></li>
 ]</a></li>
 <li><a href="#2022-06-27-1140-thanasisn">2022-06-27 11:40
 [ThanasisN]</a></li>
-<li><a href="#tags--chp1-works-broadband-ccd--1">tags: [ chp1 works
-broadband ccd ]</a></li>
-<li><a href="#2022-02-17-0000-thanasisn-1">2022-02-17 00:00
-[ThanasisN]</a></li>
-<li><a href="#tags--chp1--1">tags: [ chp1 ]</a></li>
-<li><a href="#2022-02-21-0000-thanasisn-1">2022-02-21 00:00
-[ThanasisN]</a></li>
-<li><a href="#2022-02-21-1350-thanasisn-1">2022-02-21 13:50
-[ThanasisN]</a></li>
-<li><a href="#2022-05-23-thanasisn-1">2022-05-23 [ThanasisN]</a></li>
-<li><a href="#2022-06-03-thanasisn-1">2022-06-03 [ThanasisN]</a></li>
-<li><a href="#2022-06-16-0000-ba-1">2022-06-16 00:00 [BA]</a></li>
-<li><a href="#2022-06-27-1140-thanasisn-1">2022-06-27 11:40
-[ThanasisN]</a></li>
 </ul></li>
 <li><a href="#2023">2023</a>
 <ul>
@@ -303,10 +270,10 @@ data_loss ]</a></li>
 broadband brewers ]</a></li>
 <li><a href="#2023-05-18-0915-thanasisn">2023-05-18 09:15
 [ThanasisN]</a></li>
-<li><a href="#tags--chp1--2">tags: [ chp1 ]</a></li>
+<li><a href="#tags--chp1--1">tags: [ chp1 ]</a></li>
 <li><a href="#2023-05-25-0852-thanasisn">2023-05-25 08:52
 [ThanasisN]</a></li>
-<li><a href="#tags--chp1--3">tags: [ chp1 ]</a></li>
+<li><a href="#tags--chp1--2">tags: [ chp1 ]</a></li>
 <li><a href="#2023-06-26-1126-thanasisn">2023-06-26 11:26
 [ThanasisN]</a></li>
 <li><a href="#2023-09-11-0610-utc-thanasisn">2023-09-11 06:10 UTC
@@ -357,7 +324,7 @@ document entries files</a></li>
 </ul></li>
 <li><a href="#list-of-tags">List of tags</a></li>
 <li><a href="#new-list-of-tags">New List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Sat Jan 27 12:00:05 PM EET 2024 --><!--te-->
+</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Σαβ 27 Ιαν 2024 12:17:33 μμ EET --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -720,62 +687,37 @@ id="thanasisn-67">2019-05-18 09:10 [ThanasisN]</h2>
 <p>06:10 UTC</p><h2 id="thanasisn-68">2019-05-30 10:13 [ThanasisN]</h2>
 <p>Domes cleaned at</p>
 <p>10:13 - 10:15 LT</p>
-<p>07:13 - 07:15 UTC</p><h2 id="thanasisn-69">2019-04-11 09:27
-[ThanasisN]</h2>
-<p>Instrument Cleaning</p>
-<p>09:27 - 09:29 local time</p>
-<p>06:27 - 06:29 UTC</p><h2 id="thanasisn-70">2019-05-06
-[ThanasisN]</h2>
-<p>Dimitris Karag. reported tracker misalignment!</p>
-<p>Mostly corrected after reset!</p><h2 id="thanasisn-71">2019-05-10
-09:22 [ThanasisN]</h2>
-<p>Spider webs on the instrument window cleaned! at</p>
-<p>~09:22 local</p>
-<p>~06:22 UTC</p>
-<p>Don’t know how long affected measurements.</p><h2
-id="thanasisn-72">2019-05-13 [ThanasisN]</h2>
-<p>Daylight time was enabled on broadband computer!!!!</p>
-<p>Time was changed to correct format</p>
-<p>2019-05-13 11:20 -&gt; 10:21 !! UTC</p>
-<p>Probably the time of measurement is wrong</p>
-<p>Will be evident on CS detection data</p><h2
-id="thanasisn-73">2019-05-18 09:10 [ThanasisN]</h2>
-<p>Only CHP-1 and CM-21 cleaned domes at</p>
-<p>09:10 local</p>
-<p>06:10 UTC</p><h2 id="thanasisn-74">2019-05-30 10:13 [ThanasisN]</h2>
-<p>Domes cleaned at</p>
-<p>10:13 - 10:15 local</p>
-<p>07:13 - 07:15 UTC</p><h2 id="thanasisn-75">2019-06-12 10:54
+<p>07:13 - 07:15 UTC</p><h2 id="thanasisn-69">2019-06-12 10:54
 [ThanasisN]</h2>
 <p>Testing azimuth measurements with zero elevation</p>
 <p>Test starts at 7:54 UTC</p>
 <p>It is logged on normal logs.</p>
 <p>Take care to exclude data from normal processing!</p>
 <p>Return to normal operation at 9:14 UTC</p><h2
-id="thanasisn-76">2019-06-17 09:35 [ThanasisN]</h2>
+id="thanasisn-70">2019-06-17 09:35 [ThanasisN]</h2>
 <p>Clean domes at</p>
-<p>06:35 - 06:36 UTC</p><h2 id="thanasisn-77">2019-06-27 08:33
+<p>06:35 - 06:36 UTC</p><h2 id="thanasisn-71">2019-06-27 08:33
 [ThanasisN]</h2>
 <dl>
 <dt>Clean CHP-1 and CM-21 only at</dt>
 <dd>
 <p>05:33 UTC</p>
 </dd>
-</dl><h2 id="thanasisn-78">2019-07-04 [ThanasisN]</h2>
+</dl><h2 id="thanasisn-72">2019-07-04 [ThanasisN]</h2>
 <p>After painting of the platforms, last ~two days the CHP-1 instrument,
 was covered with a plastic bag for protection.</p>
 <ul>
 <li>Leveling</li>
 <li>Silica gel renew</li>
 <li>Sighting</li>
-</ul><h2 id="thanasisn-79">2019-07-12 10:26 [ThanasisN]</h2>
+</ul><h2 id="thanasisn-73">2019-07-12 10:26 [ThanasisN]</h2>
 <p>All dome cleaned</p>
 <p>10:26 - 10:29 local time</p>
-<p>07:26 - 07:29 UTC</p><h2 id="thanasisn-80">2019-07-26 08:59
+<p>07:26 - 07:29 UTC</p><h2 id="thanasisn-74">2019-07-26 08:59
 [ThanasisN]</h2>
 <p>Cleaning all domes</p>
 <p>08:59 - 09:03 Local time</p>
-<p>05:59 - 06:03 UTC</p><h2 id="thanasisn-81">2019-12-16 11:00
+<p>05:59 - 06:03 UTC</p><h2 id="thanasisn-75">2019-12-16 11:00
 [ThanasisN]</h2>
 <dl>
 <dt>Power out for some minutes at</dt>
@@ -794,13 +736,13 @@ was covered with a plastic bag for protection.</p>
 <h1 id="section-6">2020</h1>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<h2 id="thanasisn-82">2020-01-03 [ThanasisN]</h2>
+<h2 id="thanasisn-76">2020-01-03 [ThanasisN]</h2>
 <p>There was a ransom-ware discovered on 2019-12-25</p>
 <p>Sighting is Good after 2020-03-01 10:41 LT or 8:41 UTC</p><h2
-id="thanasisn-83">2020-04-29 09:05 [ThanasisN]</h2>
+id="thanasisn-77">2020-04-29 09:05 [ThanasisN]</h2>
 <p>Clean domes at</p>
 <p>09:05 - 09:07 local time</p>
-<p>06:05 - 06:07 UTC</p><h2 id="thanasisn-84">2020-04-30 12:12
+<p>06:05 - 06:07 UTC</p><h2 id="thanasisn-78">2020-04-30 12:12
 [ThanasisN]</h2>
 <p>New silica gel to</p>
 <ul>
@@ -816,55 +758,31 @@ id="thanasisn-83">2020-04-29 09:05 [ThanasisN]</h2>
 <td>tags; [ cleaning ]</td>
 </tr>
 </tbody>
-</table><h2 id="thanasisn-85">2020-05-07 10:31 [ThanasisN]</h2>
+</table><h2 id="thanasisn-79">2020-05-07 10:31 [ThanasisN]</h2>
 <p>Dome clean at</p>
 <p>10:31 - 10:33 LT</p>
-<p>07:31 - 07:33 UTC</p><h2 id="thanasisn-86">2020-06-10 10:59
+<p>07:31 - 07:33 UTC</p><h2 id="thanasisn-80">2020-06-10 10:59
 [ThanasisN]</h2>
 <p>Domes cleaned</p>
 <p>10:59 - 11:02 LT</p>
-<p>07:59 - 08:02 UTC</p><h2 id="thanasisn-87">2020-01-03
-[ThanasisN]</h2>
-<p>There was a ransomware discovered at 2019-12-25</p>
-<p>Sighting is Good after 2020-03-01 10:41 local time 8:41 UTC</p><h2
-id="thanasisn-88">2020-04-29 09:05 [ThanasisN]</h2>
-<p>Clean domes at</p>
-<p>09:05 - 09:07 local time</p>
-<p>06:05 - 06:07 UTC</p><h2 id="thanasisn-89">2020-04-30 12:12
-[ThanasisN]</h2>
-<p>New silica gel to</p>
-<ul>
-<li>CHP-1</li>
-<li>CM-21 Horizontal</li>
-<li>UVB diffuse metal cylinder.</li>
-</ul>
-<p>12:12 - 13:25 local time</p>
-<p>09:12 - 09:25 UTC</p><h2 id="thanasisn-90">2020-05-07 10:31
-[ThanasisN]</h2>
-<p>Dome clean at</p>
-<p>10:31 - 10:33 local time</p>
-<p>07:31 - 07:33 UTC</p><h2 id="thanasisn-91">2020-06-10 10:59
-[ThanasisN]</h2>
-<p>Domes cleaned</p>
-<p>10:59 - 11:02 local time</p>
 <p>07:59 - 08:02 UTC</p>
 </div>
 <h1 id="section-7">2022</h1>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<h2 id="thanasisn-92">2022-02-17 00:00 [ThanasisN]</h2>
+<h2 id="thanasisn-81">2022-02-17 00:00 [ThanasisN]</h2>
 <p>Broadband instruments were installed? after they have been removed
 from the instruments tables.</p>
 <p>Work on instruments table was performed.</p>
 <p>New instrument table was installed for CCD spectrometers.</p>
 <p>CHP-1 was between brewers and the new CCD table, may be affected.</p>
-<p>There are photos.</p><h2 id="thanasisn-93">2022-02-21 00:00
+<p>There are photos.</p><h2 id="thanasisn-82">2022-02-21 00:00
 [ThanasisN]</h2>
 <p>The CHP-1 was moved!</p>
 <p>It was west of the brewers and moved east of the brewers.</p>
 <p>The inclined CM-21 was leveled, for comparison to the horizontal one,
 before calibration of the horizontal.</p>
-<p>There are photos</p><h2 id="thanasisn-94">2022-02-21 13:50
+<p>There are photos</p><h2 id="thanasisn-83">2022-02-21 13:50
 [ThanasisN]</h2>
 <dl>
 <dt>We consider that after</dt>
@@ -874,7 +792,7 @@ before calibration of the horizontal.</p>
 </dl>
 <p>the inclined CM-21 to have been set to horizontal position.</p>
 <p>This is reflected on the measurements.</p>
-<p>There are photos.</p><h2 id="thanasisn-95">2022-05-23
+<p>There are photos.</p><h2 id="thanasisn-84">2022-05-23
 [ThanasisN]</h2>
 <dl>
 <dt>Installation of the horizontal CM-21</dt>
@@ -882,7 +800,7 @@ before calibration of the horizontal.</p>
 <p>07:55 - 08:17 UTC</p>
 </dd>
 </dl>
-<p>There are photos.</p><h2 id="thanasisn-96">2022-06-03
+<p>There are photos.</p><h2 id="thanasisn-85">2022-06-03
 [ThanasisN]</h2>
 <p>The horizontal Global CM-21 was</p>
 <ul>
@@ -892,55 +810,7 @@ before calibration of the horizontal.</p>
 </ul>
 <p>Photos exist.</p><h2 id="ba">2022-06-16 00:00 [BA]</h2>
 <p>Τελικά έβαλα το σπασμένο shield (το κόλλησα πρόχειρα) σήμερα στις
-7.00 UTC.</p><h2 id="thanasisn-97">2022-06-27 11:40 [ThanasisN]</h2>
-<p>The inclined CM-21 is returned to the inclined position from the
-horizontal.</p>
-<dl>
-<dt>Last data in horizontal position is at</dt>
-<dd>
-<p>08:40 UTC</p>
-</dd>
-</dl><h2 id="thanasisn-98">2022-02-17 00:00 [ThanasisN]</h2>
-<p>Broadband instruments were installed? after they have been removed
-from the instruments tables.</p>
-<p>Work on instruments table was performed.</p>
-<p>New instrument table was installed for CCD spectrometers.</p>
-<p>CHP-1 was between brewers and the new CCD table, may be affected.</p>
-<p>There are photos.</p><h2 id="thanasisn-99">2022-02-21 00:00
-[ThanasisN]</h2>
-<p>The CHP-1 was moved!</p>
-<p>It was west of the brewers and moved east of the brewers.</p>
-<p>The inclined CM-21 was leveled, for comparison to the horizontal one,
-before calibration of the horizontal.</p>
-<p>There are photos</p><h2 id="thanasisn-100">2022-02-21 13:50
-[ThanasisN]</h2>
-<dl>
-<dt>We consider after</dt>
-<dd>
-<p>11:50 UTC</p>
-</dd>
-</dl>
-<p>the inclined CM-21 to have been set to horizontal position.</p>
-<p>This is reflected on the measurements.</p>
-<p>There are photos.</p><h2 id="thanasisn-101">2022-05-23
-[ThanasisN]</h2>
-<dl>
-<dt>Installation of horizontal CM-21</dt>
-<dd>
-<p>07:55 - 08:17 UTC</p>
-</dd>
-</dl>
-<p>There are photos.</p><h2 id="thanasisn-102">2022-06-03
-[ThanasisN]</h2>
-<p>The horizontal Global CM-21 was</p>
-<ul>
-<li>installed</li>
-<li>leveled</li>
-<li>start measuring <strong>without sun shield</strong></li>
-</ul>
-<p>Photos exist.</p><h2 id="ba-1">2022-06-16 00:00 [BA]</h2>
-<p>Τελικά έβαλα το σπασμένο shield (το κόλλησα πρόχειρα) σήμερα στις
-7.00 UTC.</p><h2 id="thanasisn-103">2022-06-27 11:40 [ThanasisN]</h2>
+7.00 UTC.</p><h2 id="thanasisn-86">2022-06-27 11:40 [ThanasisN]</h2>
 <p>The inclined CM-21 is returned to the inclined position from the
 horizontal.</p>
 <dl>
@@ -953,7 +823,7 @@ horizontal.</p>
 <h1 id="section-8">2023</h1>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<h2 id="thanasisn-104">2023-03-28 15:48 [ThanasisN]</h2>
+<h2 id="thanasisn-87">2023-03-28 15:48 [ThanasisN]</h2>
 <p>We removed some Global radiation data output constrains.</p>
 <p>Now we allowed:</p>
 <ul>
@@ -961,31 +831,31 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <li>Negative values during day (it was set to zero)</li>
 </ul>
 <p>Will update all sirena data for years 2006-2022, previous exported by
-us.</p><h2 id="thanasisn-105">2023-03-28 17:31 [ThanasisN]</h2>
+us.</p><h2 id="thanasisn-88">2023-03-28 17:31 [ThanasisN]</h2>
 <p>Sirena TOT files updated for 2006-2022.</p>
-<p>With the new output scheme.</p><h2 id="thanasisn-106">2023-04-03
-09:14 [ThanasisN]</h2>
+<p>With the new output scheme.</p><h2 id="thanasisn-89">2023-04-03 09:14
+[ThanasisN]</h2>
 <p>Radmon found frizzed with different system errors.</p>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
 <p>Reboot seems to fixed the problem.</p><h2
-id="thanasisn-107">2023-04-04 12:59 [ThanasisN]</h2>
+id="thanasisn-90">2023-04-04 12:59 [ThanasisN]</h2>
 <p>The tracker didn’t start at the morning due to an error of the
 <code>com port</code>.</p>
 <p>Tracker program was restarted manual.</p><h2
-id="thanasisn-108">2023-04-19 09:19 [ThanasisN]</h2>
+id="thanasisn-91">2023-04-19 09:19 [ThanasisN]</h2>
 <p>The tracker didn’t start normally today.</p>
 <dl>
 <dt>I restart it manual at</dt>
 <dd>
 <p>09:10 LT</p>
 </dd>
-</dl><h2 id="thanasisn-109">2023-05-18 09:15 [ThanasisN]</h2>
+</dl><h2 id="thanasisn-92">2023-05-18 09:15 [ThanasisN]</h2>
 <p>Cleaned broadband and brewers instruments at</p>
 <p>06:07 - 06:10 UTC</p>
-<p>A lot of dust from previous rain.</p><h2
-id="thanasisn-110">2023-05-25 08:52 [ThanasisN]</h2>
+<p>A lot of dust from previous rain.</p><h2 id="thanasisn-93">2023-05-25
+08:52 [ThanasisN]</h2>
 <p>Clean spider web from inside of CHP-1 sun shader at</p>
-<p>05:52 UTC</p><h2 id="thanasisn-111">2023-06-26 11:26 [ThanasisN]</h2>
+<p>05:52 UTC</p><h2 id="thanasisn-94">2023-06-26 11:26 [ThanasisN]</h2>
 <p>CHP-1 was cleaned from spider webs, in frond off the instrument
 window at</p>
 <p>08:26 - 08:30 UTC</p>
@@ -993,33 +863,33 @@ window at</p>
 insects.</p><h2 id="utc-thanasisn">2023-09-11 06:10 UTC [ThanasisN]</h2>
 <p>CHP-1 was cleaned!</p>
 <p>Window was very dirty, and that created a jump in the
-measurements!!</p><h2 id="thanasisn-112">2023-10-25 09:22
+measurements!!</p><h2 id="thanasisn-95">2023-10-25 09:22
 [ThanasisN]</h2>
 <p>Tracker is not tracking from yesterday.</p>
 <p>Reset it today. Tried to find zero, but failed and continue trying
 forever.</p>
 <p>Stop it reconnected, and now can not communicate with the control
-unit</p><h2 id="thanasisn-113">2023-10-26 11:20 [ThanasisN]</h2>
+unit</p><h2 id="thanasisn-96">2023-10-26 11:20 [ThanasisN]</h2>
 <p>We replaced 2 failed capacitors.</p>
 <p>Re install the board.</p>
 <p>But still there is no communication with the tracker</p><h2
-id="thanasisn-114">2023-10-30 13:54 [ThanasisN]</h2>
+id="thanasisn-97">2023-10-30 13:54 [ThanasisN]</h2>
 <p>CHP-1 tracker still not working.</p>
 <p>Possible a faulty transistor.</p>
-<p>Will replace tomorrow.</p><h2 id="thanasisn-115">2023-10-31 09:59
+<p>Will replace tomorrow.</p><h2 id="thanasisn-98">2023-10-31 09:59
 [ThanasisN]</h2>
 <p>Transistor was replaced,</p>
 <p>We can communicate with the controller.</p>
 <p>Although, the Azimuth channel is not working.</p><h2
-id="thanasisn-116">2023-11-02 11:13 [ThanasisN]</h2>
+id="thanasisn-99">2023-11-02 11:13 [ThanasisN]</h2>
 <p>Tracker is still down.</p>
-<p>Send for service.</p><h2 id="thanasisn-117">2023-11-06 12:30
+<p>Send for service.</p><h2 id="thanasisn-100">2023-11-06 12:30
 [ThanasisN]</h2>
 <p>Tracker was installed, measurement have started!</p>
 <p>Leveling, sighting, window cleaning and replacing of silica gel was
 done.</p>
 <p>The tracker had a burned out microcontroller.</p><h2
-id="thanasisn-118">2023-11-07 11:00 [ThanasisN]</h2>
+id="thanasisn-101">2023-11-07 11:00 [ThanasisN]</h2>
 <p>The CHP-1 was removed to fix a problem with the silica gel
 compartment.</p>
 <p>The instrument was taken to a metal workshop where the threads of the
@@ -1033,7 +903,7 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="eet-thanasisn">2024-01-25 13:05 EET [ThanasisN]</h2>
 <p>Cleaning of broadband and brewers windows at :</p>
 <p>13:02 - 13:03 LT</p>
-<p>11:02 - 11:03 LT</p><h2 id="thanasisn-119">2024-01-26
+<p>11:02 - 11:03 LT</p><h2 id="thanasisn-102">2024-01-26
 [ThanasisN]</h2>
 <p>Today morning the radmon was found stacked on on startup screen with
 a message that prevent it to run normally.</p>
@@ -1083,26 +953,23 @@ entries files</h2>
 <p>At least you need <code>pandoc</code> installed.</p>
 <h1 id="list-of-tags">List of tags</h1>
 <pre><code>  5 #async
- 48 #chp1
-  1 #cleaned
- 15 #cleaning
- 10 #cm21
+ 44 #chp1
+  9 #cleaning
+  5 #cm21
   2 #codding
   3 #data_corruption_certain
   1 #data_format_change
- 33 #data_loss
+ 31 #data_loss
   3 #down_time
-  6 #error
-  2 #inclined
-  7 #katastroph
-  5 #leveling
+  4 #error
+  5 #katastroph
+  4 #leveling
   1 #mounting
   2 #panic
   4 #problem
   2 #pysolar
-  1 #radmon
   1 #radmon_reboot
-  6 #silica
+  5 #silica
   2 #sun_vector
  10 #suspicious_data
   1 #sync
@@ -1112,9 +979,9 @@ entries files</h2>
  20 #tracker2</code></pre>
 <h1 id="new-list-of-tags">New List of tags</h1>
 <pre><code>  1 brewers
-  5 broadband
-  2 ccd
- 22 chp1
+  4 broadband
+  1 ccd
+ 20 chp1
   9 cleaning
   8 cm21
   5 data_loss
@@ -1128,7 +995,7 @@ entries files</h2>
   1 silica
   1 suspicious_data
   8 tracker
-  2 works</code></pre>                    
+  1 works</code></pre>                    
                 </div>
             </div>
             <script src="https://vjs.zencdn.net/5.4.4/video.js"></script>
