--- a/JOURNAL/Journal.html
+++ b/JOURNAL/Journal.html
@@ -70,213 +70,7 @@ LAP.</p>
 <h2 id="table-of-contents">Table of Contents</h2>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<!--ts--><ul>
-<li><a href="#broadband-journal">Broadband Journal</a>
-<ul>
-<li><a href="#about">About</a></li>
-<li><a href="#table-of-contents">Table of Contents</a></li>
-</ul></li>
-<li><a href="#1996">1996</a>
-<ul>
-<li><a href="#1996-02-08-0000-thanasisn">1996-02-08 00:00
-[ThanasisN]</a></li>
-</ul></li>
-<li><a href="#2015">2015</a>
-<ul>
-<li><a href="#2015-12-30-thanasisn">2015-12-30 [ThanasisN]</a></li>
-</ul></li>
-<li><a href="#2016">2016</a>
-<ul>
-<li><a href="#2016-01-08-thanasisn">2016-01-08 [ThanasisN]</a></li>
-<li><a href="#2016-01-29-thanasisn">2016-01-29 [ThanasisN]</a></li>
-<li><a href="#2016-01-30-thanasisn">2016-01-30 [ThanasisN]</a></li>
-<li><a href="#2016-03-07-thanasisn">2016-03-07 [ThanasisN]</a></li>
-<li><a href="#2016-03-28-thanasisn">2016-03-28 [ThanasisN]</a></li>
-<li><a href="#2016-04-01-thanasisn">2016-04-01 [ThanasisN]</a></li>
-<li><a href="#2016-04-11-thanasisn">2016-04-11 [ThanasisN]</a></li>
-<li><a href="#2016-04-13-thanasisn">2016-04-13 [ThanasisN]</a></li>
-<li><a href="#2016-04-14-thanasisn">2016-04-14 [ThanasisN]</a></li>
-<li><a href="#2016-04-15-thanasisn">2016-04-15 [ThanasisN]</a></li>
-<li><a href="#2016-04-20-thanasisn">2016-04-20 [ThanasisN]</a></li>
-<li><a href="#2016-05-16-thanasisn">2016-05-16 [ThanasisN]</a></li>
-<li><a href="#2016-05-25-thanasisn">2016-05-25 [ThanasisN]</a></li>
-<li><a href="#2016-05-27-thanasisn">2016-05-27 [ThanasisN]</a></li>
-<li><a href="#2016-05-31-thanasisn">2016-05-31 [ThanasisN]</a></li>
-<li><a href="#2016-06-03-thanasisn">2016-06-03 [ThanasisN]</a></li>
-<li><a href="#2016-06-07-thanasisn">2016-06-07 [ThanasisN]</a></li>
-<li><a href="#2016-06-09-thanasisn">2016-06-09 [ThanasisN]</a></li>
-<li><a href="#2016-06-15-thanasisn">2016-06-15 [ThanasisN]</a></li>
-<li><a href="#2016-06-16-thanasisn">2016-06-16 [ThanasisN]</a></li>
-<li><a href="#2016-07-04-0940-thanasisn">2016-07-04 09:40
-[ThanasisN]</a></li>
-<li><a href="#2016-07-05-thanasisn">2016-07-05 [ThanasisN]</a></li>
-<li><a href="#2016-07-07-thanasisn">2016-07-07 [ThanasisN]</a></li>
-<li><a href="#2016-07-19-thanasisn">2016-07-19 [ThanasisN]</a></li>
-<li><a href="#2016-07-21-thanasisn">2016-07-21 [ThanasisN]</a></li>
-<li><a href="#2016-07-22-thanasisn">2016-07-22 [ThanasisN]</a></li>
-<li><a href="#2016-08-31--thanasisn">2016-08-31 [ThanasisN]</a></li>
-<li><a href="#2016-09-23--thanasisn">2016-09-23 [ThanasisN]</a></li>
-<li><a href="#2016-10-31-thanasisn">2016-10-31 [ThanasisN]</a></li>
-</ul></li>
-<li><a href="#2017">2017</a>
-<ul>
-<li><a href="#2017-01-10-thanasisn">2017-01-10 [ThanasisN]</a></li>
-<li><a href="#2017-12-25-thanasisn">2017-12-25 [ThanasisN]</a></li>
-<li><a href="#2017-12-26-thanasisn">2017-12-26 [ThanasisN]</a></li>
-<li><a href="#2017-01-11-thanasisn">2017-01-11 [ThanasisN]</a></li>
-<li><a href="#2017-01-12-thanasisn">2017-01-12 [ThanasisN]</a></li>
-<li><a href="#2017-01-19-thanasisn">2017-01-19 [ThanasisN]</a></li>
-<li><a href="#2017-02-22-thanasisn">2017-02-22 [ThanasisN]</a></li>
-<li><a href="#2017-03-03-1239-thanasisn">2017-03-03 12:39
-[ThanasisN]</a></li>
-<li><a href="#2017-05-04-0930-thanasisn">2017-05-04 09:30
-[ThanasisN]</a></li>
-<li><a href="#2017-07-12-0934-thanasisn">2017-07-12 09:34
-[ThanasisN]</a></li>
-<li><a href="#2017-08-09-thanasisn">2017-08-09 [ThanasisN]</a></li>
-<li><a href="#2017-08-15-thanasisn">2017-08-15 [ThanasisN]</a></li>
-<li><a href="#2017-08-16-thanasisn">2017-08-16 [ThanasisN]</a></li>
-<li><a href="#2017-08-17-0945-thanasisn">2017-08-17 09:45
-[ThanasisN]</a></li>
-<li><a href="#2017-08-22-thanasisn">2017-08-22 [ThanasisN]</a></li>
-<li><a href="#2017-09-07-thanasisn">2017-09-07 [ThanasisN]</a></li>
-<li><a href="#2017-09-13-0910-thanasisn">2017-09-13 09:10
-[ThanasisN]</a></li>
-<li><a href="#2017-10-02-0930-thanasisn">2017-10-02 09:30
-[ThanasisN]</a></li>
-<li><a href="#2017-10-09-1117-thanasisn">2017-10-09 11:17
-[ThanasisN]</a></li>
-<li><a href="#2017-10-30-0923-thanasisn">2017-10-30 09:23
-[ThanasisN]</a></li>
-<li><a href="#2017-12-05-thanasisn">2017-12-05 [ThanasisN]</a></li>
-<li><a href="#2017-12-13-thanasisn">2017-12-13 [ThanasisN]</a></li>
-<li><a href="#2017-12-15-thanasisn">2017-12-15 [ThanasisN]</a></li>
-<li><a href="#2017-12-18-1004-thanasisn">2017-12-18 10:04
-[ThanasisN]</a></li>
-</ul></li>
-<li><a href="#2018">2018</a>
-<ul>
-<li><a href="#2018-01-18-thanasisn">2018-01-18 [ThanasisN]</a></li>
-<li><a href="#2018-03-20-thanasisn">2018-03-20 [ThanasisN]</a></li>
-<li><a href="#2018-03-23-1136-thanasisn">2018-03-23 11:36
-[ThanasisN]</a></li>
-<li><a href="#2018-04-12-0835-thanasisn">2018-04-12 08:35
-[ThanasisN]</a></li>
-<li><a href="#2018-04-17-0834-thanasisn">2018-04-17 08:34
-[ThanasisN]</a></li>
-<li><a href="#2018-05-16-1035-thanasisn">2018-05-16 10:35
-[ThanasisN]</a></li>
-<li><a href="#2018-05-18-thanasisn">2018-05-18 [ThanasisN]</a></li>
-<li><a href="#2018-12-07-thanasisn">2018-12-07 [ThanasisN]</a></li>
-</ul></li>
-<li><a href="#2019">2019</a>
-<ul>
-<li><a href="#2019-04-11-0927-thanasisn">2019-04-11 09:27
-[ThanasisN]</a></li>
-<li><a href="#2019-05-06-thanasisn">2019-05-06 [ThanasisN]</a></li>
-<li><a href="#2019-05-10-0922-thanasisn">2019-05-10 09:22
-[ThanasisN]</a></li>
-<li><a href="#2019-05-13-thanasisn">2019-05-13 [ThanasisN]</a></li>
-<li><a href="#2019-05-18-0910-thanasisn">2019-05-18 09:10
-[ThanasisN]</a></li>
-<li><a href="#2019-05-30-1013-thanasisn">2019-05-30 10:13
-[ThanasisN]</a></li>
-<li><a href="#2019-06-12-1054-thanasisn">2019-06-12 10:54
-[ThanasisN]</a></li>
-<li><a href="#2019-06-17-0935-thanasisn">2019-06-17 09:35
-[ThanasisN]</a></li>
-<li><a href="#2019-06-27-0833-thanasisn">2019-06-27 08:33
-[ThanasisN]</a></li>
-<li><a href="#2019-07-04-thanasisn">2019-07-04 [ThanasisN]</a></li>
-<li><a href="#2019-07-12-1026-thanasisn">2019-07-12 10:26
-[ThanasisN]</a></li>
-<li><a href="#2019-07-26-0859-thanasisn">2019-07-26 08:59
-[ThanasisN]</a></li>
-<li><a href="#2019-12-16-1100-thanasisn">2019-12-16 11:00
-[ThanasisN]</a></li>
-</ul></li>
-<li><a href="#2020">2020</a>
-<ul>
-<li><a href="#2020-01-03-thanasisn">2020-01-03 [ThanasisN]</a></li>
-<li><a href="#2020-04-29-0905-thanasisn">2020-04-29 09:05
-[ThanasisN]</a></li>
-<li><a href="#2020-04-30-1212-thanasisn">2020-04-30 12:12
-[ThanasisN]</a></li>
-<li><a href="#2020-05-07-1031-thanasisn">2020-05-07 10:31
-[ThanasisN]</a></li>
-<li><a href="#2020-06-10-1059-thanasisn">2020-06-10 10:59
-[ThanasisN]</a></li>
-</ul></li>
-<li><a href="#2022">2022</a>
-<ul>
-<li><a href="#2022-02-17-0000-thanasisn">2022-02-17 00:00
-[ThanasisN]</a></li>
-<li><a href="#2022-02-21-0000-thanasisn">2022-02-21 00:00
-[ThanasisN]</a></li>
-<li><a href="#2022-02-21-1350-thanasisn">2022-02-21 13:50
-[ThanasisN]</a></li>
-<li><a href="#2022-05-23-thanasisn">2022-05-23 [ThanasisN]</a></li>
-<li><a href="#2022-06-03-thanasisn">2022-06-03 [ThanasisN]</a></li>
-<li><a href="#2022-06-16-0000-ba">2022-06-16 00:00 [BA]</a></li>
-<li><a href="#2022-06-27-1140-thanasisn">2022-06-27 11:40
-[ThanasisN]</a></li>
-</ul></li>
-<li><a href="#2023">2023</a>
-<ul>
-<li><a href="#2023-03-28-1548-thanasisn">2023-03-28 15:48
-[ThanasisN]</a></li>
-<li><a href="#2023-03-28-1731-thanasisn">2023-03-28 17:31
-[ThanasisN]</a></li>
-<li><a href="#2023-04-03-0914-thanasisn">2023-04-03 09:14
-[ThanasisN]</a></li>
-<li><a href="#2023-04-04-1259-thanasisn">2023-04-04 12:59
-[ThanasisN]</a></li>
-<li><a href="#2023-04-19-0919-thanasisn">2023-04-19 09:19
-[ThanasisN]</a></li>
-<li><a href="#2023-05-18-0915-thanasisn">2023-05-18 09:15
-[ThanasisN]</a></li>
-<li><a href="#2023-05-25-0852-thanasisn">2023-05-25 08:52
-[ThanasisN]</a></li>
-<li><a href="#2023-06-26-1126-thanasisn">2023-06-26 11:26
-[ThanasisN]</a></li>
-<li><a href="#2023-09-11-0610-utc-thanasisn">2023-09-11 06:10 UTC
-[ThanasisN]</a></li>
-<li><a href="#2023-10-25-0922-thanasisn">2023-10-25 09:22
-[ThanasisN]</a></li>
-<li><a href="#2023-10-26-1120-thanasisn">2023-10-26 11:20
-[ThanasisN]</a></li>
-<li><a href="#2023-10-30-1354-thanasisn">2023-10-30 13:54
-[ThanasisN]</a></li>
-<li><a href="#2023-10-31-0959-thanasisn">2023-10-31 09:59
-[ThanasisN]</a></li>
-<li><a href="#2023-11-02-1113-thanasisn">2023-11-02 11:13
-[ThanasisN]</a></li>
-<li><a href="#2023-11-06-1230-thanasisn">2023-11-06 12:30
-[ThanasisN]</a></li>
-<li><a href="#2023-11-07-1100-thanasisn">2023-11-07 11:00
-[ThanasisN]</a></li>
-</ul></li>
-<li><a href="#2024">2024</a>
-<ul>
-<li><a href="#2024-01-25-1305-eet-thanasisn">2024-01-25 13:05 EET
-[ThanasisN]</a></li>
-<li><a href="#2024-01-26-thanasisn">2024-01-26 [ThanasisN]</a></li>
-<li><a href="#2024-02-02-1628-eet">2024-02-02 16:28 EET</a></li>
-</ul></li>
-<li><a href="#journal-instructions">Journal instructions</a>
-<ul>
-<li><a href="#format-for-entries">Format for entries</a>
-<ul>
-<li><a href="#filenames-should-be-numerical-sorted">Filenames should be
-numerical sorted</a></li>
-<li><a href="#file-template">File template</a></li>
-</ul></li>
-<li><a href="#build-a-journal-document-entries-files">Build a journal
-document entries files</a></li>
-</ul></li>
-<li><a href="#list-of-tags">List of tags</a></li>
-<li><a href="#new-list-of-tags">New List of tags</a></li>
-</ul><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Fri Feb 16 07:40:04 PM EET 2024 --><!--te-->
+<!--ts--><!-- Created by https://github.com/ekalinin/github-markdown-toc --><!-- Added by: athan, at: Sat Jan 18 17:40:04 EET 2025 --><!--te-->
 </div>
 <hr />
 <h1 id="section">1996</h1>
@@ -770,7 +564,15 @@ horizontal.</p>
 <h1 id="section-8">2023</h1>
 <div class="columns"
 style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
-<h2 id="thanasisn-87">2023-03-28 15:48 [ThanasisN]</h2>
+<h2 id="thanasisn-87">2023-02-20 08:29 [ThanasisN]</h2>
+<h3 id="mean-value-of-irradiance-during-the-time-period">1. Mean value
+of irradiance during the time period</h3>
+<p>Make the filter relative to CS reference instead of fixed
+envelope.</p>
+<p><code>Clear_sky_id_Reno-Hansen_apply_v14.R</code> -&gt;
+<code>Clear_sky_id_Reno-Hansen_apply_v14.1.R</code> Recommended by Bais
+and original author.</p><h2 id="thanasisn-88">2023-03-28 15:48
+[ThanasisN]</h2>
 <p>We removed some Global radiation data output constrains.</p>
 <p>Now we allowed:</p>
 <ul>
@@ -778,31 +580,31 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <li>Negative values during day (it was set to zero)</li>
 </ul>
 <p>Will update all sirena data for years 2006-2022, previous exported by
-us.</p><h2 id="thanasisn-88">2023-03-28 17:31 [ThanasisN]</h2>
+us.</p><h2 id="thanasisn-89">2023-03-28 17:31 [ThanasisN]</h2>
 <p>Sirena TOT files updated for 2006-2022.</p>
-<p>With the new output scheme.</p><h2 id="thanasisn-89">2023-04-03 09:14
+<p>With the new output scheme.</p><h2 id="thanasisn-90">2023-04-03 09:14
 [ThanasisN]</h2>
 <p>Radmon found frozen with different system errors.</p>
 <p>No tracking with CHP-1 at start of the day. Day is cloudy.</p>
 <p>Reboot seems to fixed the problem.</p><h2
-id="thanasisn-90">2023-04-04 12:59 [ThanasisN]</h2>
+id="thanasisn-91">2023-04-04 12:59 [ThanasisN]</h2>
 <p>The tracker didn’t start at the morning due to an error of the
 <code>com port</code>.</p>
 <p>Tracker program was restarted manual.</p><h2
-id="thanasisn-91">2023-04-19 09:19 [ThanasisN]</h2>
+id="thanasisn-92">2023-04-19 09:19 [ThanasisN]</h2>
 <p>The tracker didn’t start normally today.</p>
 <dl>
 <dt>I restart it manual at</dt>
 <dd>
 <p>09:10 LT</p>
 </dd>
-</dl><h2 id="thanasisn-92">2023-05-18 09:15 [ThanasisN]</h2>
+</dl><h2 id="thanasisn-93">2023-05-18 09:15 [ThanasisN]</h2>
 <p>Cleaned broadband and brewers instruments at</p>
 <p>06:07 - 06:10 UTC</p>
-<p>A lot of dust from previous rain.</p><h2 id="thanasisn-93">2023-05-25
+<p>A lot of dust from previous rain.</p><h2 id="thanasisn-94">2023-05-25
 08:52 [ThanasisN]</h2>
 <p>Clean spider web from inside of CHP-1 sun shader at</p>
-<p>05:52 UTC</p><h2 id="thanasisn-94">2023-06-26 11:26 [ThanasisN]</h2>
+<p>05:52 UTC</p><h2 id="thanasisn-95">2023-06-26 11:26 [ThanasisN]</h2>
 <p>CHP-1 was cleaned from spider webs, in frond off the instrument
 window at</p>
 <p>08:26 - 08:30 UTC</p>
@@ -810,33 +612,33 @@ window at</p>
 insects.</p><h2 id="utc-thanasisn">2023-09-11 06:10 UTC [ThanasisN]</h2>
 <p>CHP-1 was cleaned!</p>
 <p>Window was very dirty, and that created a jump in the
-measurements!!</p><h2 id="thanasisn-95">2023-10-25 09:22
+measurements!!</p><h2 id="thanasisn-96">2023-10-25 09:22
 [ThanasisN]</h2>
 <p>Tracker is not tracking from yesterday.</p>
 <p>Reset it today. Tried to find zero, but failed and continue trying
 forever.</p>
 <p>Stop it reconnected, and now can not communicate with the control
-unit</p><h2 id="thanasisn-96">2023-10-26 11:20 [ThanasisN]</h2>
+unit</p><h2 id="thanasisn-97">2023-10-26 11:20 [ThanasisN]</h2>
 <p>We replaced 2 failed capacitors.</p>
 <p>Re install the board.</p>
 <p>But still there is no communication with the tracker</p><h2
-id="thanasisn-97">2023-10-30 13:54 [ThanasisN]</h2>
+id="thanasisn-98">2023-10-30 13:54 [ThanasisN]</h2>
 <p>CHP-1 tracker still not working.</p>
 <p>Possible a faulty transistor.</p>
-<p>Will replace tomorrow.</p><h2 id="thanasisn-98">2023-10-31 09:59
+<p>Will replace tomorrow.</p><h2 id="thanasisn-99">2023-10-31 09:59
 [ThanasisN]</h2>
 <p>Transistor was replaced,</p>
 <p>We can communicate with the controller.</p>
 <p>Although, the Azimuth channel is not working.</p><h2
-id="thanasisn-99">2023-11-02 11:13 [ThanasisN]</h2>
+id="thanasisn-100">2023-11-02 11:13 [ThanasisN]</h2>
 <p>Tracker is still down.</p>
-<p>Send for service.</p><h2 id="thanasisn-100">2023-11-06 12:30
+<p>Send for service.</p><h2 id="thanasisn-101">2023-11-06 12:30
 [ThanasisN]</h2>
 <p>Tracker was installed, measurement have started!</p>
 <p>Leveling, sighting, window cleaning and replacing of silica gel was
 done.</p>
 <p>The tracker had a burned out microcontroller.</p><h2
-id="thanasisn-101">2023-11-07 11:00 [ThanasisN]</h2>
+id="thanasisn-102">2023-11-07 11:00 [ThanasisN]</h2>
 <p>The CHP-1 was removed to fix a problem with the silica gel
 compartment.</p>
 <p>The instrument was taken to a metal workshop where the threads of the
@@ -850,7 +652,7 @@ style="column-count: 2 ;; column-gap: 4em ;; column-rule: 1px solid black ;">
 <h2 id="eet-thanasisn">2024-01-25 13:05 EET [ThanasisN]</h2>
 <p>Cleaning of broadband and brewers windows at :</p>
 <p>13:02 - 13:03 LT</p>
-<p>11:02 - 11:03 UTC</p><h2 id="thanasisn-102">2024-01-26
+<p>11:02 - 11:03 UTC</p><h2 id="thanasisn-103">2024-01-26
 [ThanasisN]</h2>
 <p>Today morning the radmon was found stacked on on startup screen with
 a message that prevent it to run normally.</p>
@@ -928,17 +730,19 @@ entries files</h2>
   6 #tracker
  20 #tracker2</code></pre>
 <h1 id="new-list-of-tags">New List of tags</h1>
-<pre><code>  1 brewers
+<pre><code>  1 CSid
+  1 INCcm21
+  1 brewers
   5 broadband
   1 ccd
  30 chp1
  17 cleaning
+  1 clear_sky
  10 cm21
   1 data_corruption_certain
  12 data_loss
   2 down_time
   4 error
-  1 INCcm21
   2 inclined
   4 leveling
  14 problem
